force-app/main/default/objects/DynamicRelatedList_Field__mdt/DynamicRelatedList_Field__mdt.object-meta.xml
<CustomObject>
    <label>DynamicRelatedList Field</label>
    <pluralLabel>DynamicRelatedList Fields</pluralLabel>
</CustomObject>