force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/DynamicRelatedList__c.field-meta.xml
<CustomField>
    <fullName>DynamicRelatedList__c</fullName>
    <label>DynamicRelatedList</label>
    <referenceTo>DynamicRelatedList__mdt</referenceTo>
    <relationshipLabel>DynamicRelatedList Fields</relationshipLabel>
    <relationshipName>DynamicRelatedList_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>