force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/DynamicRelatedList_Object__c.field-meta.xml
<CustomField>
    <fullName>DynamicRelatedList_Object__c</fullName>
    <label>DynamicRelatedList Object</label>
    <referenceTo>DynamicRelatedList_Object__mdt</referenceTo>
    <relationshipLabel>DynamicRelatedList Fields</relationshipLabel>
    <relationshipName>DynamicRelatedList_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>