force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Id_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Id Field</label>
    <type>Checkbox</type>
</CustomField>