force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/List_Cell_Attribute__c.field-meta.xml
<CustomField>
    <fullName>List_Cell_Attribute__c</fullName>
    <label>List Cell Attribute</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>