force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/List_Cell_Datatype__c.field-meta.xml
<CustomField>
    <fullName>List_Cell_Datatype__c</fullName>
    <label>List Cell Datatype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>action</fullName>
                <default>true</default>
                <label>action</label>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>button</fullName>
            </value>
            <value>
                <fullName>button-icon</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>date-local</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>location</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>