force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/Sequence_In_List__c.field-meta.xml
<CustomField>
    <fullName>Sequence_In_List__c</fullName>
    <label>Sequence In List</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>