force-app/main/default/objects/DynamicRelatedList_Field__mdt/fields/Show_In_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Related_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Related List</label>
    <type>Checkbox</type>
</CustomField>